--- a/src/App.scss
+++ b/src/App.scss
@@ -43,6 +43,17 @@ $darkBlue: unquote('#3c3c4ef0');
     min-height: 120%;
   }
 }
+
+.close-tag{
+  display: none;
+}
+
+.skill-box-row:hover{
+  .close-tag{
+    display: block;
+  }
+}
+
 .skill-box-wrapper {
   padding: 1em;
 
